# warpdrive-contracts

./: .dockerignore  .gitignore  Cargo.toml  README.md  Taskfile.yml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  middleware-image.yml  release.yml
contracts/ed25519-security/: Cargo.toml  README.md
contracts/ed25519-security/src/: contract.rs  lib.rs  storage.rs
contracts/ed25519-security/src/tests/: admin_transfer.rs  historical.rs  setup.rs  signers.rs  threshold.rs
contracts/ed25519-verification/: Cargo.toml  README.md
contracts/ed25519-verification/src/: contract.rs  lib.rs  storage.rs  utils.rs
contracts/ed25519-verification/src/tests/: deploy.rs  setup.rs  verify.rs
contracts/ethereum-handler/: Cargo.toml  README.md
contracts/ethereum-handler/src/: contract.rs  envelope.rs  lib.rs  tests.rs
contracts/ethereum-handler/src/tests/: benchmark.rs  handler.rs  setup.rs  wavs.rs
contracts/handler/: Cargo.toml  EVENTS.md  README.md
contracts/handler/src/: contract.rs  envelope.rs  lib.rs  storage.rs  tests.rs  verification_client.rs
contracts/handler/src/tests/: handler.rs  setup.rs  wavs.rs
contracts/project-root/: Cargo.toml  EVENTS.md  README.md
contracts/project-root/src/: contract.rs  lib.rs  storage.rs  tests.rs
contracts/project-root/src/tests/: deploy.rs  forward.rs  governance.rs  setup.rs
contracts/secp256k1-security/: Cargo.toml  README.md
contracts/secp256k1-security/src/: contract.rs  lib.rs  storage.rs  tests.rs
contracts/secp256k1-security/src/tests/: historical.rs  setup.rs  signers.rs  threshold.rs
contracts/secp256k1-verification/: Cargo.toml  README.md
contracts/secp256k1-verification/src/: contract.rs  lib.rs  storage.rs  utils.rs
contracts/secp256k1-verification/src/tests/: deploy.rs  setup.rs  verify.rs
contracts/security/: Cargo.toml  EVENTS.md  README.md
contracts/security/src/: contract.rs  lib.rs  storage.rs  tests.rs
contracts/security/src/tests/: counter.rs  deploy.rs  historical.rs  setup.rs  signers.rs  threshold.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: checkpoint.rs  errors.rs  lib.rs
contracts/shared/src/interfaces/: security.rs
contracts/stellar-handler/: Cargo.toml  README.md
contracts/stellar-handler/src/: contract.rs  lib.rs  storage.rs  tests.rs
contracts/stellar-handler/src/tests/: benchmark.rs  handler.rs  setup.rs
contracts/verification/: Cargo.toml  EVENTS.md
contracts/verification/src/: contract.rs  lib.rs  security_client.rs  storage.rs  tests.rs  utils.rs
contracts/verification/src/tests/: setup.rs  verify.rs
docker/middleware/: Dockerfile  README.md  cli.sh  common.sh  deploy.sh  docker-compose.yml  project_root.sh  signers.sh  smoke.sh
taskfiles/: ipfs.yml  testnet.yml
tools/test-vectors/: Cargo.toml
tools/test-vectors/src/: main.rs
