[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["WarpDrive"]
repository = "https://github.com/warp-driver/warpdrive-contracts"
rust-version = "1.90.0"

[workspace.dependencies]
soroban-sdk = "25.3.0"
warpdrive-shared = { path = "packages/shared" }
warpdrive-security = { path = "contracts/security" }
warpdrive-verification = { path = "contracts/verification" }
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
enum-repr = "0.2.6"
hex-literal = "0.4.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
