[workspace]
resolver = "2"
members = [
    "contracts/*",
    "packages/*",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["WarpDrive"]
repository = "https://github.com/warp-driver/warpdrive-contracts"
rust-version = "1.90.0"

[workspace.dependencies]
soroban-sdk = "25.3.0"
warpdrive-shared = { path = "packages/shared" }
warpdrive-secp256k1-security = { path = "contracts/secp256k1-security" }
warpdrive-secp256k1-verification = { path = "contracts/secp256k1-verification" }
warpdrive-ed25519-security = { path = "contracts/ed25519-security" }
warpdrive-ed25519-verification = { path = "contracts/ed25519-verification" }
warpdrive-ethereum-handler = { path = "contracts/ethereum-handler" }
warpdrive-stellar-handler = { path = "contracts/stellar-handler" }
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
hex-literal = "0.4.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
