[package]
name = "warpdrive-project-root"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
warpdrive-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
warpdrive-secp256k1-security = { workspace = true }
warpdrive-secp256k1-verification = { workspace = true }
warpdrive-ed25519-security = { workspace = true }
warpdrive-ed25519-verification = { workspace = true }
warpdrive-stellar-handler = { workspace = true }
warpdrive-shared = { workspace = true, features = ["testutils"] }
