[package]
name = "warpdrive-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
warpdrive-shared = { path = "../../packages/shared" }
enum-repr = "0.2.6"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
warpdrive-shared = { path = "../../packages/shared", features = ["testutils"] }
