[package]
name = "warpdrive-verification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
warpdrive-security = { path = "../security" }
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10.8"
