[package]
name = "warpdrive-verification"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
warpdrive-shared = { path = "../../packages/shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
warpdrive-security = { path = "../security" }
warpdrive-shared = { path = "../../packages/shared", features = ["testutils"] }
