[package]
name = "test-vectors"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10.8"
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
hex = "0.4"
