[package]
name = "test-vectors"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
k256 = { version = "0.13.4", features = ["ecdsa"] }
sha3 = "0.10.8"
sha2 = "0.10"
ed25519-dalek = "2"
alloy-sol-types = { version = "1", default-features = false }
alloy-primitives = { version = "1", default-features = false }
hex = "0.4"
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
warpdrive-shared = { workspace = true }
